# ComfyUI-Mickmumpitz-Nodes

./: .gitignore  CLAUDE.md  README.md  THIRD_PARTY_LICENSES  __init__.py  install.py  pyproject.toml  requirements.txt  research.md  tooltip.md
.claude/: settings.local.json
docs/: TODO_synced_widgets_bug.md  idea_mirrored_prompts.md
nodes/: __init__.py  _video_utils.py  batch_color_corrector.py  bundle.py  clamp_float.py  context_video.py  control_crossfade.py  data_exists.py  execution_gate.py  frame_context_fit.py  free_vram.py  image_exists.py  image_fallback.py  image_mode_router.py  iterative_video.py  lipsync.py  ltx_resolution_picker.py  preprocess_settings.py  preview_bridge.py  resolution_picker.py  shot_system.py  story_style_selector.py  string_batch.py  string_pack.py  video_concatenate.py  wan_resolution_picker.py
preview-bridge-fix/: README.md  __init__.py  preview_bridge_fix.py
web/js/: bundle.js  clamp_float.js  iter_prompt_builder.js  iterative_video.js  label.js  ltx_resolution_picker.js  node_bypasser.js  preprocess_settings.js  resolution_picker.js  shot_duplicator.js  shot_order.js  shot_prompt_importer.js  shot_utils.js  string_batch.js  string_pack.js  wan_resolution_picker.js
workflow/: LTX-2-0-TRAILER-BUILDER_2-02.json
