[project]
name = "comfyui-mickmumpitz-nodes"
description = "A collection of custom nodes for ComfyUI by Mickmumpitz"
version = "1.0.0"
license = { file = "LICENSE" }

dependencies = [
    "numpy",
    "Pillow",
    "opencv-python",
]

[project.urls]
Repository = "https://github.com/mickmumpitz/ComfyUI-Mickmumpitz-Nodes"

[tool.comfy]
PublisherId = "mickmumpitz"
DisplayName = "Mickmumpitz Nodes"
Icon = ""
