[project]
name = "comfyui-mickmumpitz-nodes"
description = "A collection of custom nodes for ComfyUI by Mickmumpitz"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy>=1.21.0", "Pillow>=9.0.0", "opencv-python>=4.5.0"]

[project.urls]
Repository = "https://github.com/mickmumpitz/ComfyUI-Mickmumpitz-Nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/mickmumpitz/ComfyUI-Mickmumpitz-Nodes/wiki"
"Bug Tracker" = "https://github.com/mickmumpitz/ComfyUI-Mickmumpitz-Nodes/issues"

[tool.comfy]
PublisherId = "mickmumpitz"
DisplayName = "ComfyUI-Mickmumpitz-Nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

